# CRAAM

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTORS  LICENSE  Makefile  README.Rmd  README.md  README.rst  craam.pro  interface.txt  raam.cbp  raam.depend
craam/: Action.hpp  ImMDP.hpp  RMDP.hpp  Samples.hpp  Simulation.hpp  State.hpp  Transition.hpp  config.hpp  config.hpp.in  definitions.hpp  fastopt.hpp  modeltools.hpp  optimization.hpp
craam/algorithms/: nature_declarations.hpp  nature_response.hpp  occupancies.hpp  robust_values.hpp  valueiteration.hpp  values.hpp
craam/optimization/: bisection.hpp  optimization.hpp  srect_gurobi.hpp
craam/simulators/: invasive_species_simulation.hpp  inventory_simulation.hpp
data/recommender/: initial.csv  mdp.csv  observ.csv
doc/: doxygen.config  doxygen.config.in
include/: Action.hpp  ImMDP.hpp  RMDP.hpp  Samples.hpp  Simulation.hpp  State.hpp  Transition.hpp  config.hpp.in  definitions.hpp  modeltools.hpp  valueiteration.hpp
python/: LICENSE  setup.py  simple_test.py
python/craam/: __init__.py  crobust.pyx  version.py
python/doc/: Makefile  make.bat
python/doc/source/: .Interpretable.rst.swp  .Samples.rst.swp  .index.rst.swp  Interpretable.rst  MDP.rst  RMDP.rst  Samples.rst  Simulation.rst  conf.py  index.rst
rcraam/: DESCRIPTION  NAMESPACE
rcraam/R/: MDPClass.R  RcppExports.R  test.R
rcraam/inst/include/: rcraam.h
rcraam/src/: MDPModule.cpp  Makevars  Makevars.win  RcppExports.cpp  rcpp_hello_world.cpp  robust_algorithms.cpp
src/: Action.cpp  ImMDP.cpp  RMDP.cpp  Samples.cpp  Simulation.cpp  State.cpp  Transition.cpp  definitions.cpp  modeltools.cpp
test/: benchmark.cpp  core_tests.hpp  dev.cpp  implementable_tests.hpp  simulation_tests.hpp  test.cpp  test2.cpp  test_implementable.cpp  test_simulation.cpp
